--- a/css/styles.css
+++ b/css/styles.css
@@ -132,11 +132,31 @@ ul {
   margin-bottom: 30px;
 }
 
+.hero {
+  padding: 200px 452px;
+  background-color: var(--primary-text-color);
+}
+
+.border-header {
+  border-bottom: 1px solid #ECECEC;
+}
+
 .secondary-title {
   font-size: 36px;
   line-height: 42px;
   text-align: center;
   color: var(--title-text-color);
+  margin-bottom: 92px;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.section.no-padding {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .specific-element-title {
@@ -144,7 +164,9 @@ ul {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
+
 
 .team-element-title {
   color: var(--title-text-color);
@@ -152,6 +174,7 @@ ul {
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .team-description {
