--- a/css/styles.css
+++ b/css/styles.css
@@ -29,13 +29,14 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container {
   width: 1200px;
-
-  margin-right: auto;
   margin-left: auto;
+  margin-right: auto;
 }
 
 .site-nav {
@@ -107,9 +108,6 @@ ul {
 .logo-footer {
   color: var(--primary-white-color);
 }
-.logo-background {
-  background-color: var(--primary-text-color);
-}
 
 /* Buttons */
 
@@ -121,6 +119,7 @@ ul {
   font-size: 16px;
   line-height: 1.6;
   cursor: pointer;
+  text-align: center;
 }
 
 .button-filter {
@@ -130,6 +129,7 @@ ul {
   line-height: 1.6;
   background-color: var(--secondary-color);
   padding: 6px 22px;
+  align-items: center;
 }
 
 .button-filter:focus,
@@ -151,23 +151,24 @@ ul {
 }
 
 /* Sections */
+
+.border-header {
+  border-bottom: 1px solid #ececec;
+}
+
 .hero-title {
   color: var(--primary-white-color);
-  background-color: var(--primary-text-color);
+  background-color: #2f303a;
   font-weight: 900;
   font-size: 44px;
+  text-align: center;
   line-height: 1.4;
   text-transform: uppercase;
   margin-bottom: 30px;
 }
 
 .hero {
-  padding: 200px 452px;
-  background-color: var(--primary-text-color);
-}
-
-.border-header {
-  border-bottom: 1px solid #ececec;
+  background-color: #2f303a;
 }
 
 .secondary-title {
@@ -175,7 +176,13 @@ ul {
   line-height: 42px;
   text-align: center;
   color: var(--title-text-color);
-  margin-bottom: 92px;
+  margin-bottom: 50px;
+}
+
+/* Section specific */
+.section.no-padding {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .section {
@@ -183,17 +190,47 @@ ul {
   padding-bottom: 94px;
 }
 
-.section.no-padding {
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
+/* Особенности */
 .specific-element-title {
   color: var(--title-text-color);
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
   margin-bottom: 10px;
+}
+
+.specific-container {
+  display: flex;
+}
+
+.style-specific {
+  width: 270px;
+}
+
+.specific-container .style-specific + .style-specific {
+  margin-left: 30px;
+}
+
+/* Чем мы занимаемся */
+.secondary-container {
+  display: flex;
+}
+
+.item-secondary {
+  width: 370;
+}
+
+.secondary-container .item-secondary + .item-secondary {
+  margin-left: 30px;
+}
+
+/* Наша команда */
+.team-container {
+  display: flex;
+}
+
+.team-container .item-team + .item-team {
+  margin-left: 30px;
 }
 
 .team-element-title {
@@ -210,19 +247,10 @@ ul {
   text-align: center;
 }
 
-.address {
-  font-style: normal;
-}
-
-.address-map {
-  color: var(--primary-white-color);
-  line-height: 1.7;
-  background-color: var(--primary-text-color);
-}
-
-.address-contact {
-  color: rgba(255, 255, 255, 0.6);
-  background-color: var(--primary-text-color);
+/* Works Portfolio */
+.works {
+  margin-top: 88px;
+  align-items: center;
 }
 
 .works-element {
@@ -235,4 +263,22 @@ ul {
 .works-paragraph {
   font-size: 16px;
   line-height: 1.9;
+}
+
+/* Футер */
+.address {
+  font-style: normal;
+}
+
+.address-map {
+  color: var(--primary-white-color);
+  line-height: 1.7;
+}
+
+.address-contact {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-background {
+  background-color: #2f303a;
 }
