--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,7 @@ ul {
 /* Works Portfolio */
 .works {
   margin-top: 88px;
+  margin-bottom: 55px;
   align-items: center;
 }
 
@@ -265,6 +266,18 @@ ul {
   line-height: 1.9;
 }
 
+/* Card set */
+.card-set {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.item-card {
+  margin-left: 30px;
+  margin-top: 30px;
+}
 /* Футер */
 .address {
   font-style: normal;
