--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,10 @@ ul {
   margin-left: 30px;
   margin-top: 30px;
 }
+
+.card-set .item-card:nth-child(-n + 3) {
+  border: 1px solid black;
+}
 /* Футер */
 .address {
   font-style: normal;
