--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,10 @@ ul {
   color: var(--primary-white-color);
 }
 
+.logo-address-footer {
+  margin-bottom: 20px;
+}
+
 /* Buttons */
 
 .button {
@@ -296,6 +300,14 @@ ul {
 
 .address-contact {
   color: rgba(255, 255, 255, 0.6);
+}
+
+.address-contact-mail {
+  margin-bottom: 9px;
+}
+
+.address-contact-map {
+  margin-bottom: 9px;
 }
 
 .footer-background {
