--- a/css/styles.css
+++ b/css/styles.css
@@ -174,10 +174,8 @@ ul {
   margin-bottom: 30px;
 }
 
-.hero.section {
+.hero. {
   background-color: #2f303a;
-  padding-top: 200px;
-  padding-bottom: 280px;
 }
 
 .secondary-title {
@@ -220,6 +218,12 @@ ul {
   margin-left: 30px;
 }
 
+.specific-element-paragraph {
+  color: var(--primary-text-color);
+  font-size: 14px;
+  line-height: 1.7;
+}
+
 /* Чем мы занимаемся */
 .secondary-container {
   display: flex;
@@ -249,6 +253,7 @@ ul {
   line-height: 1.2;
   text-align: center;
   margin-bottom: 10px;
+  margin-top: 30px;
 }
 
 .team-description {
@@ -260,6 +265,11 @@ ul {
   background-color: #f5f4fa;
 }
 
+.item-team {
+  background-color: var(--primary-white-color);
+  padding-bottom: 30px;
+}
+
 /* Works Portfolio */
 .works {
   margin-top: 88px;
@@ -269,6 +279,7 @@ ul {
 
 .works-element {
   color: var(--title-text-color);
+  font-family: Roboto, sans-serif;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
@@ -276,6 +287,7 @@ ul {
 
 .works-paragraph {
   font-size: 16px;
+  font-weight: 400px;
   line-height: 1.9;
 }
 
@@ -288,6 +300,10 @@ ul {
 
 .work-container .work-item + .work-item {
   margin-left: 8px;
+}
+
+.work-item {
+  font-family: Roboto, sans-serif;
 }
 
 /* Card set */
@@ -307,23 +323,28 @@ ul {
 /* Футер */
 .address {
   font-style: normal;
+  text-decoration: none;
 }
 
 .address-map {
   color: var(--primary-white-color);
   line-height: 1.7;
+  text-decoration: none;
 }
 
 .address-contact {
   color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
 }
 
 .address-contact-mail {
   margin-bottom: 9px;
+  text-decoration: none;
 }
 
 .address-contact-map {
   margin-bottom: 9px;
+  text-decoration: none;
 }
 
 .footer-background {
