--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,7 @@ ul {
 
 .border-header {
   border-bottom: 1px solid #ececec;
-  min-height: 80px;
+  height: 80px;
 }
 
 .hero-title {
@@ -177,7 +177,7 @@ ul {
 
 .hero.section {
   background-color: #2f303a;
-  min-height: 600px;
+  height: 600px;
   padding-top: 200px;
   padding-bottom: 200px;
 }
