--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,6 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .container {
@@ -275,9 +273,10 @@ ul {
 }
 
 /* Works Portfolio */
-.works {
-  margin-top: 88px;
-  margin-bottom: 55px;
+
+.works.container {
+  margin-top: 94px;
+  margin-bottom: 94px;
   align-items: center;
 }
 
@@ -287,12 +286,18 @@ ul {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  padding-right: 24px;
+  padding-left: 24px;
+  margin-top: 20px;
+  margin-bottom: 4px;
 }
 
 .works-paragraph {
   font-size: 16px;
   font-weight: 400px;
   line-height: 1.9;
+  padding-left: 24px;
+  margin-bottom: 12px;
 }
 
 .work-container {
@@ -315,7 +320,6 @@ ul {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
-  margin-top: -30px;
 }
 
 .item-card {
@@ -323,6 +327,14 @@ ul {
   margin-top: 30px;
   border-bottom: 1px solid #eeeeee;
   min-height: 404px;
+}
+
+.item-card:nth-child(-n + 3) {
+  margin-top: 0;
+}
+
+.item-card:nth-child(3n + 1) {
+  margin-left: 0;
 }
 
 /* Футер */
